deploy/nexodus/components/mailcatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailcatch
  labels:
    app: mailcatch
spec:
  ports:
    - name: http
      protocol: TCP
      port: 1080
      targetPort: http
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: smtp
  selector:
    app: mailcatch
